<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/action_bar_exec"
        android:text="@string/action_bar_exec_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/action_bar_exec_notification"
        android:text="@string/action_bar_exec_notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/action_bar_interrupt"
        android:text="@string/action_bar_interrupt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>