<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="moe.wjk.autolua.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_doc"
        android:name="moe.wjk.autolua.ui.doc.DocListFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_doc_list" >
        <action
            android:id="@+id/show_doc_webpage"
            app:destination="@id/docWebViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="moe.wjk.autolua.settings.SettingsFragment"
        android:label="@string/title_settings"/>
    <fragment
        android:id="@+id/docWebViewFragment"
        android:name="moe.wjk.autolua.ui.doc.DocWebViewFragment"
        android:label="fragment_doc_web_view"
        tools:layout="@layout/fragment_doc_web_view" >
        <argument
            android:name="doc_url"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

</navigation>